update html file

--- a/Index.html
+++ b/Index.html
@@ -2,9 +2,62 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+
+
+    <title>pawan</title>
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
+
+    <style>
+
+        html {
+            scroll-behavior: smooth;
+        }
+    </style>
 </head>
-<body>
-  <h1>Welcome to pawan</h1>
+
+<ol>
+    <li>Sri lanka</li>
+    <li>
+        india
+        <ol type="a" start="5">
+            <li>
+                <u>western india</u>
+
+                <p>welcome to <b>western india</b></p>
+                <ul type="Squre">
+
+
+
+                    <li>Goa</li>
+
+                    <p>most beautifull area in the world</p>
+
+
+
+                    <li>
+                        Gujarat
+                        <ul type="disc">
+                            <li>area 1</li>
+                            <li><mark>area 2</mark></li>
+                            <li>area 3</li>
+                            <li>area 4</li>
+                        </ul>
+                    </li>
+                </ul>
+            </li>
+            <li>eastern india</li>
+            <li>north india</li></li>
+            <li>
+                south india
+                <ul type="circle">
+                    <li>kearala</li>
+                    <li>chennai</li>
+                </ul>
+            </li>
+        </oL>
+    </li>
+
+</ol>
+
 </body>
 </html>
